--- a/index.html
+++ b/index.html
@@ -31,10 +31,10 @@
                             <a class="nav-link active" aria-current="page" href="#apresentation">Início</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#project">Projetos</a>
+                            <a class="nav-link active" href="#project">Projetos</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#certification">Certificados</a>
+                            <a class="nav-link active" href="#certification">Certificados</a>
                         </li>
                     </ul>
                 </div>
@@ -44,8 +44,8 @@
     <main>
         <section class="apresentation my-padding" id="apresentation">
             <div class="half mt-5">
-                <h1>Desenvolvedor frontend</h1>
-                <p class="fs-6">Olá, me chamo <b>Felipe Oliveira</b> sou formado em análise e desenvolvimento de
+                <h1>DESENVOLVEDOR FRONTEND</h1>
+                <p style="color: rgb(221, 221, 221);">Olá, me chamo <b>Felipe Oliveira</b> sou formado em análise e desenvolvimento de
                     sistemas UMFG
                     (2023).
                 </p>
@@ -78,26 +78,26 @@
             </div>
         </section>
         <section class="project" id="project">
-            <h1>Projetos</h1>
+            <h1 class="color-black">PROJETOS</h1>
             <div class="projects">
                 <div class="show-project-img">
                     <div class="project-img">
                         <img src="./img/openfinance-full.jpg" alt="" data-tooltip="Bom dia">
                     </div>
                     <span class="text-span">
-                        <h3>Openfinance</h3>
+                        <h3><b>OPENFINANCE</b></h3>
                         <p>Sistema de gerenciamento de finanças pessoais.</p>
-                        <a class="btn-access-project" href="">Acessar <i class="fa-solid fa-caret-right"></i></a>
+                        <a class="btn-access-project" href="" target="_blank">Acessar <i class="fa-solid fa-caret-right"></i></a>
                     </span>
                 </div>
                 <div class="show-project-img">
-                    <span class="project-img">
-                        <img src="./img/reconhecimento-de-voz-full.jpg" alt="">
-                    </span>
                     <span class="text-span">
-                        <h3>Reconhecimento de voz</h3>
+                        <h3><b>RECONHECIMENTO DE VOZ</b></h3>
                         <p>Sistema de reconhecimento de voz com Javascript.</p>
-                        <a class="btn-access-project" href="">Acessar <i class="fa-solid fa-caret-right"></i></a>
+                        <a class="btn-access-project" href="" target="_blank">Acessar <i class="fa-solid fa-caret-right"></i></a>
+                    </span>
+                    <span class="project-img reverse-project-img">
+                        <img src="./img/reconhecimento-de-voz-full.jpg" alt="" >
                     </span>
                 </div>
                 <div class="show-project-img">
@@ -105,15 +105,15 @@
                         <img src="./img/api-github-full.jpg" alt="">
                     </div>
                     <span class="text-span">
-                        <h3>API GitHub</h3>
+                        <h3><b>API GITHUB</b></h3>
                         <p>Consumo de API do GitHub para apresentar quantidade de seguidores de um usuário</p>
-                        <a class="btn-access-project" href="">Acessar <i class="fa-solid fa-caret-right"></i></a>
+                        <a class="btn-access-project" href="https://github.com/Flipe124/atividade-lambda" target="_blank">Acessar <i class="fa-solid fa-caret-right"></i></a>
                     </span>
                 </div>
             </div>
         </section>
         <section class="certification" id="certification">
-            <h2>Certificados</h1>
+            <h2>CERTIFICADOS</h1>
                 <h6><b>Formação Acadêmica</b></h6>
                 <div class="show-certification">
                     <div class="img">
@@ -160,7 +160,7 @@
         </section>
         <section class="footer">
             <div class="line-full"></div>
-            <div class="dev">Desenvolvido por <b>Felipe Oliveira</b></div>
+            <div class="dev">Copyright © 2023 Felipe Oliveira</div>
         </section>
     </main>
 
